Fixed text-align!

--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -43,12 +43,7 @@
         padding-left: 3px;
         padding-right: 15px;
         grid-column: 2;
-        /* text-align: justify; */
-        
-    }
-    #right-side{
-        text-align: justify;
-        grid-column: 2;
+        text-align: left;
     }
 
     #right-side h3, #right-side h4{
@@ -57,5 +52,6 @@
 
     #right-side p{
         margin-left: 10%;
+        text-align: left;
     }
 }
